--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,26 @@ body {
 	padding: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
 		Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-	background-color: rgb(240, 240, 240);
+	background-color: rgb(9, 1, 31);
+}
+
+.App{
+	color: rgb(255, 255, 255);
+	max-width: 740px;
+	background-color: rgb(9,1,31);
+	box-shadow: rgba(118,143,255, 0.1)0px 16px 24px 0px;
+	padding: 40px;
+	margin: 65px auto 45 px;
+	border-radius: 4.5px;
+}
+
+.format-toolbar{
+	display: flex;
+	border-bottom: solid 1.7px rgba(199, 198, 255, 0.15);
+	padding: 10px 0;
+	margin: 0 0 10px 0;
+}
+
+.tooltip-icon-button{
+	border:0;
 }
